2008-03-20  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbpoppler.[ch], src/rbpoppler-page.c: just buildable with
	poppler-glib 0.7.3.

	* test/: added.

	* extconf.rb: fixed build error on Win32. [Patch #1843689]
	Reported by Yaakov Selkowitz with a patch. Thanks!!!

2007-11-11  Kouhei Sutou  <kou@cozmixng.org>

	* README: updated supported poppler-glib version: 0.5.2 - 0.6.2.

2007-10-20  Kouhei Sutou  <kou@cozmixng.org>

	* sample/pdf2.rb: removed needless filename -> URI conversion.

	* sample/pdf2svg.rb: added a new example that convert PDF to SVG.

2007-10-13  Kouhei Sutou  <kou@cozmixng.org>

	* src/: used POPPLER_CHECK_VERSION(0, 6, 0) not
	POPPLER_CHECK_VERSION(0, 5, 9).

	* README: updated supported poppler-glib version: 0.5.2 - 0.6.1.

	* src/rbpoppler-document.c:
	- used RVAL2DOC() not RVAL2GOBJ().
	- supported 0.6.0.

	* src/rbpoppler-attachment.c: supported 0.6.0.

2007-09-09  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbpoppler-page.c: supported 0.6.0. Bug 1790607.

2007-07-27  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbpoppler.h, src/rbpoppler-page.c: worked with poppler <
	0.5.9 again.

	* src/rbpoppler-document.c: used POPPLER_CHECK_VERSION(0, 5, 9)
	instead of HAVE_POPPLER_FONT_INFO because my patch is accepted by
	upstream.

	* src/rbpoppler.c, src/rbpoppler-page.c: don't show
	poppler_form_field_get_field_type().

	* src/lib/poppler.rb, src/rbpoppler.h, src/rbpoppler-page.c:
	followed the recent poppler form API changes but not tested
	because I don't have a PDF with form...

2007-07-13  Guillaume Cottenceau

	* src/rbpoppler-document.c, src/rbpoppler-page.c: replace RTEST
	uses by RVAL2CBOOL

2007-07-13  Guillaume Cottenceau

	* src/rbpoppler-document.c: "? Qtrue : QFalse" => CBOOL2RVAL
	cleanup

2007-06-23  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbpoppler.h, src/rbpoppler-page.c: followed new functions
	and types in poppler-page.h. But this is not enough. We need more
	works.

	* src/rbpoppler-document.c, src/lib/poppler.rb: supported